--- a/LLaMa_2_Chatbot.ipynb
+++ b/LLaMa_2_Chatbot.ipynb
@@ -423,21 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -447,15 +433,33 @@
       },
       "outputs": [
         {
-          "name": "stdout",
+          "name": "stderr",
           "output_type": "stream",
           "text": [
-            "^C\n"
+            "\n",
+            "[notice] A new release of pip is available: 23.3.2 -> 24.0\n",
+            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
           ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "34610fba43d440928d98c3cac4190593",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
-        "!huggingface-cli login"
+        "!pip install huggingface_hub\n",
+        "from huggingface_hub import notebook_login\n",
+        "notebook_login()"
       ]
     },
     {
